# PBMCompressor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  fileManagement.c  fileManagement.h  main.c  mersenneTwister.c  mersenneTwister.h  structures.c  structures.h  tsp.h
src/: main.c  pointManagement.c  pointManagement.h  structures.c  structures.h  tsp.c  tsp.h
tests/: 0.pbm  7.pbm  8.pbm
